# magi-github

./: Cargo.toml
src/: lib.rs
